# efi-pcm-rs

./: Cargo.toml  LICENSE  README  build.sh  run_qemu.sh
.cargo/: config
edk2-test/: build.sh
edk2-test/RustTestPkg/: RustTestPkg.dec  RustTestPkg.dsc
edk2-test/RustTestPkg/Application/Launcher/: Launcher.c  Launcher.inf
edk2-test/RustTestPkg/Include/Protocol/: SimpleAudioOut.h
efi-dxe/: Cargo.toml
efi-dxe/src/: lib.rs  serial.rs  stderr.rs
efi-hda-dxe/: Cargo.toml  TODO  run_hda.sh
efi-hda-dxe/src/: device_path.rs  driver_binding.rs  hda.rs  iobase.rs  main.rs
efi-pcm/: Cargo.toml
efi-pcm-dxe/: Cargo.toml  TODO  run_qemu.sh
efi-pcm-dxe/src/: main.rs
efi-pcm-dxe/src/dxe/: mod.rs  serial.rs  stderr.rs
efi-pcm-test/: Cargo.toml  build.sh
efi-pcm-test/src/: connect.rs  main.rs
efi-pcm/src/: lib.rs  proto.rs
efi-test-bus-dxe/: Cargo.toml  build.sh  run.sh
efi-test-bus-dxe/src/: main.rs
miri-tests/dma-buffer/: Cargo.toml
miri-tests/dma-buffer/src/: clobber.S  clobber.rs  main.rs
scripts/: mkdata.py
src/: connect.rs  main.rs  proto.rs
