[package]
name = "my-test"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = { path = "../uefi-rs", features = ['exts'] }
uefi-services = { path = "../uefi-rs/uefi-services" }
uefi-macros = { path = "../uefi-rs/uefi-macros" }
