[package]
name = "efi-pcm-dxe"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# uefi = { version = "0.11.0", features = ['exts', 'logger', 'alloc'] }
# uefi-services = "0.8.0"
uefi = { path = "../../uefi-rs", features = ['exts', 'logger', 'alloc'] }
# uefi-services = { path = "../../uefi-rs/uefi-services" }
uefi-macros = { path = "../../uefi-rs/uefi-macros" }
# , features = [ "max_level_off" ]
log = { version = "0.4.11", default-features = false }
bitflags = "*"
memoffset = "*"
efi-pcm = { path = "../efi-pcm" }
