[package]
name = "efi-pcm-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = { path = "../../uefi-rs", features = ['exts', 'logger', 'alloc'] }
uefi-services = { path = "../../uefi-rs/uefi-services" }
uefi-macros = { path = "../../uefi-rs/uefi-macros" }
log = { version = "0.4.11", default-features = false }
efi-pcm = { path = "../efi-pcm" }
