[package]
name = "efi-pcm-test"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = { git = "ssh://git@github.com/reggies/uefi-rs", features = ['exts', 'logger', 'alloc'] }
uefi-macros = { git = "ssh://git@github.com/reggies/uefi-rs" }
uefi-services = { git = "ssh://git@github.com/reggies/uefi-rs" }

log = { version = "0.4.11", default-features = false }
efi-pcm = { path = "../efi-pcm" }
