[package]
name = "efi-pcm"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# uefi = { version = "0.11.0", features = ['exts', 'logger', 'alloc'] }
uefi = { path = "../../uefi-rs", features = ['exts', 'logger', 'alloc'] }
uefi-macros = { path = "../../uefi-rs/uefi-macros" }
log = { version = "0.4.11", default-features = false }
