[package]
name = "efi-pcm"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = { git = "ssh://git@github.com/reggies/uefi-rs", features = ['exts', 'logger', 'alloc'] }
uefi-macros = { git = "ssh://git@github.com/reggies/uefi-rs" }

log = { version = "0.4.11", default-features = false }
